<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="google_map_key" translatable="false">"AIzaSyDiCOJBNtW32lbFuB-nfpyhxzsHxDMM2XM"</string>
    <string name="retry">Retry</string>
    <string name="show_all">Show All</string>
    <string name="show_redemption_only">Show Redeem Only</string>
    <string name="purchase_only_message">This ATM is purchase only</string>
    <string name="purchase_only_info">This ATM does support only to buy, redemption is still not supported</string>
    <string name="failed_to_load_atms">Failed to load the atms</string>

    <string name="request_action">Get code</string>
    <string name="request_confirm">Confirm</string>
    <string name="request_cash_out_amount_validation">Min %1$s max %2$s, multiple of %3$d bills</string>
    <string name="request_cash_out_empty_code">Token is empty</string>
    <string name="request_cash_invalid_phone_number">Invalid phone number</string>
    <string name="request_cash_out_complete_fields">Complete the fields</string>
    <string name="request_cash_out_amount_not_valid">Amount not valid</string>
    <string name="request_cash_out_amount_not_valid_min_max">Amount not valid, it has to be between %1$d and %2$d.</string>
    <string name="request_cash_out_amount_multiple">Amount must be multiple of %1$d$</string>
    <string name="request_cash_out_email_confirmation">We\'ve sent a confirmation code to your email.</string>
    <string name="request_cash_out_email_confirmation_message">Check your email for the confirmation word we sent you. It may take a couple of minutes.</string>
    <string name="request_cash_out_phone_confirmation">We\'ve sent an SMS with the confirmation word.</string>
    <string name="request_cash_out_phone_confirmation_message">Check your SMS inbox for the confirmation word we sent you. It may take a couple of minutes.</string>
    <string name="request_cash_out_invalid_code">Invalid code</string>
    <string name="request_cash_out_unable_to_confirm">Unable to confirm the code</string>
    <string name="request_cash_out_dialog_title">Withdrawal requested</string>
    <string name="request_cash_out_dialog_message">"Please send the amount of %1$s BTC to the ATM"</string>
    <string name="request_cash_out_dialog_send_action">Send</string>
    <string name="request_cash_out_dialog_details_action">Details</string>
    <string name="login_success">Login Successful</string>
    <string name="otp_verification_success">OTP verification successful</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="login">Login</string>
    <string name="show_redeem_only">Show Redeem Only</string>
    <string name="amount_to_withdraw">Amount to withdraw</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="email">Email</string>
    <string name="agree_text_message">I agree to receive text messages specific to this transaction. Standard messaging rates may apply.</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="enter_word">Enter Word</string>
    <string name="atm_cash_out_requests">ATM Cash Out Requests</string>
    <string name="you_have_no_requests_start_your_first_atm_cash_out_sending_some_btc">You have no requests, start your first ATM cash out sending some BTC.</string>
    <string name="request_now">Request Now</string>
    <string name="signup">SignUp</string>
    <string name="phone_number">phone number</string>
    <string name="name">name</string>
    <string name="surname">surname</string>
    <string name="register">Register</string>
    <string name="confirm_login">Confirm login</string>
    <string name="confirm">Confirm</string>
    <string name="ssn">SSN</string>
    <string name="scan_license">Scan Document</string>
    <string name="profile_info">Get Profile Info</string>
    <string name="kyc_details">Get Kyc Details</string>
</resources>