<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScannerActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rootView"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/kycInfo"
                android:text="@string/kyc_details"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:lines="8"
                android:id="@+id/kycDetails"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/profileInfo"
                android:text="@string/profile_info"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:lines="8"
                android:id="@+id/profileDetails"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/scanQR"
                android:text="@string/scan_license"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:lines="4"
                android:id="@+id/driverDetails"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/firstName"
                android:hint="@string/first_name"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/lastName"
                android:hint="@string/last_name"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/ssn"
                android:hint="@string/ssn"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/updateInfo"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>