<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background_login_layout"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:filterTouchesWhenObscured="true"
    android:isScrollContainer="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_gravity="bottom"
        android:animateLayoutChanges="true"
        android:clickable="true"
        android:isScrollContainer="false"
        android:orientation="vertical"
        android:padding="0dp"
        android:layout_marginBottom="-8dp"
        app:cardCornerRadius="8dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="25dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userPhoneNumber"
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/login" />

            <EditText
                android:id="@+id/confirmLogin"
                android:hint="@string/confirm_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/confirmButton"
                android:text="@string/confirm" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>